Fixing Dark Mode

--- a/packages/dashbuilder/appformer/uberfire-workbench/uberfire-workbench-client/src/main/resources/org/uberfire/client/resources/css/workbench.css
+++ b/packages/dashbuilder/appformer/uberfire-workbench/uberfire-workbench-client/src/main/resources/org/uberfire/client/resources/css/workbench.css
@@ -171,6 +171,10 @@
   height: 100%;
 }
 
+.uf-le-overflow {
+  overflow: auto;
+}
+
 .uf-perspective-rendered-container {
   width: 100%;
   max-width: none;
